--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Descubre la fabricación artesanal de guitarras clásicas y eléctricas con materiales de alta calidad y sonido excepcional. Guitarras hechas a medida para músicos exigentes.">
     <meta name="keywords" content="guitarras artesanales, guitarras clásicas, guitarras eléctricas, fabricación de guitarras, luthería, guitarras personalizadas, guitarras a medida">
     <title>Home</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
