otros arreglos de rutas de acceso

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Descubre la fabricación artesanal de guitarras clásicas y eléctricas con materiales de alta calidad y sonido excepcional. Guitarras hechas a medida para músicos exigentes.">
     <meta name="keywords" content="guitarras artesanales, guitarras clásicas, guitarras eléctricas, fabricación de guitarras, luthería, guitarras personalizadas, guitarras a medida">
     <title>Home</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styvles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -16,22 +16,22 @@
             <a class="nav-link active" aria-current="page" href="../pages/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./quienes-somos.html">¿Quiénes somos?</a>
+            <a class="nav-link" href="./pages/quienes-somos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./guitarras-pedido.html">Guitarras a pedido</a>
+            <a class="nav-link" href="./pages/guitarras-pedido.html">Guitarras a pedido</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./opiniones-clientes.html">Opiniones de clientes</a>
+            <a class="nav-link" href="./pages/opiniones-clientes.html">Opiniones de clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./preguntas-frecuentes.html">Preguntas frecuentes</a>
+            <a class="nav-link" href="./pages/preguntas-frecuentes.html">Preguntas frecuentes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="./historia-guitarra.html">Historia de la guitarra</a>
+            <a class="nav-link " href="./pages/historia-guitarra.html">Historia de la guitarra</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
           </li>       
         </ul>       
       </header>
