--- a/pages/guitarras-pedido.html
+++ b/pages/guitarras-pedido.html
@@ -13,7 +13,7 @@
   <header>
     <ul class="nav justify-content-center">
       <li class="nav-item"> 
-        <a class="nav-link"  href="../pages/index.html">Home</a>
+        <a class="nav-link"  href="../index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="./quienes-somos.html">¿Quiénes somos?</a>
