--- a/pages/historia-guitarra.html
+++ b/pages/historia-guitarra.html
@@ -14,7 +14,7 @@
     <header>
         <ul class="nav justify-content-center">
             <li class="nav-item"> 
-              <a class="nav-link"  href="../pages/index.html">Home</a>
+              <a class="nav-link"  href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./quienes-somos.html">¿Quiénes somos?</a>
