--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>       
       </header>
       <main>
-        <img class="logo" src="../assets/img/Logo1-min.webp" alt="Logo Don Tomasino">
+        <img class="logo" src="assets/img/Logo1-min.webp" alt="Logo Don Tomasino">
        <h1>Guitarras Artesanales Don Tomasino</h1> 
           <p>Descubre el sonido auténtico de una guitarra artesanal. Nuestras guitarras clásicas y eléctricas son creadas con pasión y dedicación, utilizando técnicas tradicionales y materiales de la más alta calidad. Cada guitarra es una obra de arte única, diseñada para proporcionar un sonido rico y expresivo. Nuestros artesanos trabajan con dedicación para crear instrumentos que no solo suenen increíbles, sino que también sean una joya visual. Explora nuestra selección de guitarras artesanales y descubre la perfección en cada detalle. ¡Encuentra tu guitarra soñada y comienza a crear música que te haga sentir vivo!"        
           </p>
@@ -56,22 +56,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/img/clasica 1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1">
+                <img src="assets/img/clasica 1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic2">
+                <img src="assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic2">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/clasica3-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic3">
+                <img src="assets/img/clasica3-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic3">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/clasica4-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic4">
+                <img src="assets/img/clasica4-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic4">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
+                <img src="assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/clasica6-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic6">
+                <img src="assets/img/clasica6-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic6">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
@@ -100,22 +100,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/img/electrica b-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric1">
+                <img src="assets/img/electrica b-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric1">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/electrica c-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric2">
+                <img src="assets/img/electrica c-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric2">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/electrica d-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric3">
+                <img src="assets/img/electrica d-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric3">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/electrica e-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric4">
+                <img src="assets/img/electrica e-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric4">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/electrica f-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric5">
+                <img src="assets/img/electrica f-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric5">
               </div>
               <div class="carousel-item">
-                <img src="../assets/img/electrica g-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric6">
+                <img src="assets/img/electrica g-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric6">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
