--- a/index.html
+++ b/index.html
@@ -56,17 +56,8 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/clasica 1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic2">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/clasica3-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic3">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/clasica4-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic4">
-              </div>
+                <img src="assets/img/clasica1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1" style="display: block;">
+              </div>                     
               <div class="carousel-item">
                 <img src="assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
               </div>
