--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Guitarras Clasicas</h2>
           <p>Fabricamos guitarras clasicas con la mejor calidad de maderas, además cuentan con clavijeros artesanales de fabricación propia</p>
           
-          <div id="carousel1" class="carousel slide">
+          <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="Slide 2"></button>
