--- a/index.html
+++ b/index.html
@@ -57,7 +57,19 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assets/img/clasica1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1" style="display: block;">
-              </div>                     
+              </div>    
+              <div class="carousel-inner">
+              <div class="carousel-item ">
+                <img src="assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic2" style="display: block;">
+              </div>            
+              <div class="carousel-inner">
+              <div class="carousel-item ">
+                <img src="assets/img/clasica3-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic3" style="display: block;">
+              </div>       
+              <div class="carousel-inner">
+              <div class="carousel-item ">
+                <img src="assets/img/clasica4-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic4" style="display: block;">
+                    </div>   
               <div class="carousel-item">
                 <img src="assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
               </div>
@@ -91,22 +103,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/electrica b-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric1">
+                <img src="assets/img/electrica-b-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric1">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/electrica c-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric2">
+                <img src="assets/img/electrica-c-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric2">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/electrica d-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric3">
+                <img src="assets/img/electrica-d-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric3">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/electrica e-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric4">
+                <img src="assets/img/electrica-e-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric4">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/electrica f-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric5">
+                <img src="assets/img/electrica-f-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric5">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/electrica g-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric6">
+                <img src="assets/img/electrica-g-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Electric6">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
@@ -129,7 +141,7 @@
       <p id="seguinos">Seguinos en nuestras redes</p>
       <div class="redes"><a href="http://instagram.com/username" target="_blank"><img src="assets/img/instagram-min.png" alt="logo de instagram"></a>
       <a href="http://facebook.com/username" target="_blank"><img src="assets/img/facebook-min.png" alt="logo de facebook"></a>
-      <a href="https://x.com/?lang=es" target="_blank"><img src="assets/img/instagram-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="assets/img/whats app-min.png" alt="logo de whats app"></a>
+      <a href="https://x.com/?lang=es" target="_blank"><img src="assets/img/x-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="assets/img/whats-app-min.png" alt="logo de whats app"></a>
       </div>
 
     </footer>
