--- a/index.html
+++ b/index.html
@@ -53,30 +53,45 @@
               <button type="button" data-bs-target="#carousel1" data-bs-slide-to="4" aria-label="Slide 5"></button>
               <button type="button" data-bs-target="#carousel1" data-bs-slide-to="5" aria-label="Slide 6"></button>
               
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/clasica1-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic1" style="display: block;">
-              </div>    
-              <div class="carousel-inner">
-              <div class="carousel-item ">
-                <img src="assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic2" style="display: block;">
-              </div>            
-              <div class="carousel-inner">
-              <div class="carousel-item ">
-                <img src="assets/img/clasica3-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic3" style="display: block;">
-              </div>       
-              <div class="carousel-inner">
-              <div class="carousel-item ">
-                <img src="assets/img/clasica4-min.webp" class="d-block w-100" alt="guitarra Don Tomasino Clasic4" style="display: block;">
-                    </div>   
-              <div class="carousel-item">
-                <img src="assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
+              <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#carousel1" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="assets/img/clasica1-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/clasica2-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/clasica3-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/clasica4-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic4">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/clasica5-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic5">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/clasica6-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic6">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-              <div class="carousel-item">
-                <img src="assets/img/clasica6-min.webp" class="d-block w-100" alt="Guitarra Don Tomasino Clasic6">
-              </div>
-            </div>
+              
             <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
