--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>  
         <ul class="nav justify-content-center">
           <li class="nav-item"> 
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./pages/quienes-somos.html">¿Quiénes somos?</a>
