arreglo enlaces carousel

--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -13,7 +13,7 @@
     <header>
       <ul class="nav justify-content-center">
         <li class="nav-item"> 
-          <a class="nav-link"  href="../index.html">Home</a>
+          <a class="nav-link"  href="/index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="./quienes-somos.html">¿Quiénes somos?</a>
@@ -55,7 +55,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/luthier grupo-min.webp" class="d-block w-100" alt="Grupo de trabajo">
+            <img src="../assets/img/luthiergrupo-min.webp" class="d-block w-100" alt="Grupo de trabajo">
           </div>
           <div class="carousel-item">
             <img src="../assets/img/luthier1.webp" class="d-block w-100" alt="luthier 1">
@@ -64,7 +64,7 @@
             <img src="../assets/img/luthier2.webp" class="d-block w-100" alt="luthier 2">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/luthier 3.webp" class="d-block w-100" alt="luthier 3">
+            <img src="../assets/img/luthier3.webp" class="d-block w-100" alt="luthier 3">
           </div>
           <div class="carousel-item">
             <img src="../assets/img/luthier4.webp" class="d-block w-100" alt="luthier 4">
@@ -73,13 +73,13 @@
             <img src="../assets/img/luthier5.webp" class="d-block w-100" alt="luthier 5">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/luthier 6.webp" class="d-block w-100" alt="luthier 6">
+            <img src="../assets/img/luthier6.webp" class="d-block w-100" alt="luthier 6">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/luthier 7 (1).webp" class="d-block w-100" alt="luthier 7">
+            <img src="../assets/img/luthier7(1).webp" class="d-block w-100" alt="luthier 7">
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/Luthier 10-min.webp" class="d-block w-100" alt="luthier 8">
+            <img src="../assets/img/Luthier-10-min.webp" class="d-block w-100" alt="luthier 8">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
