--- a/pages/guitarras-pedido.html
+++ b/pages/guitarras-pedido.html
@@ -40,7 +40,7 @@
    
     <img src="../assets/img/clasica-min.webp" class="rounded float-start" alt="guitarra clasica hecha a pedido">
     <img src="../assets/img/electrica-min.webp" class="rounded float-end" alt="guitarra eléctrica hecha a pedido"> 
-    
+  <br>  
   <p class="lead">¿Estás buscando una guitarra que se adapte a tus necesidades y preferencias específicas? En Guitarras Don Tomasino, ofrecemos la opción de crear guitarras a pedido, diseñadas y construidas según tus especificaciones. <br> ¿Cómo funciona? <br>1. Consulta: Ponte en contacto con nosotros para discutir tus ideas y necesidades. Nuestros expertos en guitarras te ayudarán a definir tus requerimientos. <br> 2. Diseño: Nuestro equipo de diseñadores creará un diseño personalizado para tu guitarra, teniendo en cuenta tus preferencias de forma, tamaño, madera, electrónica y otros detalles. <br> 3. Construcción: Nuestros artesanos expertos construirán tu guitarra a mano, utilizando materiales de alta calidad y técnicas tradicionales. <br> 4. Prueba y ajuste: Antes de entregarte tu guitarra, la probaremos y ajustaremos para asegurarnos de que suene y se sienta perfecta. Opciones personalizables - Forma y tamaño del cuerpo - Tipo de madera para el cuerpo, el mástil y el diapasón - Electrónica y pastillas - Acabado y decoración - Otros detalles personalizables Plazos y precios - Plazo de entrega: 180 días aproximadamente. - Precio: Se remite un presupuesto personalizado conforme al instrumento que se solicita. <br>¿Qué incluye el precio?- <br> Guitarra personalizada construida a mano - Garantía de calidad y satisfacción</p> <br>
   <div id="carousel-A" class="carousel slide">
     <div class="carousel-indicators">
@@ -59,25 +59,25 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/assets/img/electrica 1.webp"  class="d-block w-100" alt="guitarra electrica 1">
+        <img src="/assets/img/electrica-1.webp"  class="d-block w-100" alt="guitarra electrica 1">
       </div>
       <div class="carousel-item">
-        <img src="/assets/img/electrica 2.webp"  class="d-block w-100" alt="guitarra electrica 2">
+        <img src="/assets/img/electrica-2.webp"  class="d-block w-100" alt="guitarra electrica 2">
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/electrica 3.webp" class="d-block w-100" alt="guitarra electrica 3">
+        <img src="../assets/img/electrica-3.webp" class="d-block w-100" alt="guitarra electrica 3">
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/electrica 4.webp" class="d-block w-100" alt="guitarra electrica 4">
+        <img src="../assets/img/clasica4-min.webp" class="d-block w-100" alt="guitarra electrica 4">
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/electrica 5.webp" class="d-block w-100" alt="guitarra electrica 5">
+        <img src="../assets/img/electrica-5.webp" class="d-block w-100" alt="guitarra electrica 5">
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/electrica 6.webp" class="d-block w-100" alt="guitarra electrica 6">
+        <img src="../assets/img/electrica-6.webp" class="d-block w-100" alt="guitarra electrica 6">
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/clasica 1-min.webp" class="d-block w-100" alt="guitarra clasica1">
+        <img src="../assets/img/clasica1-min.webp" class="d-block w-100" alt="guitarra clasica1">
       </div>
       <div class="carousel-item">
         <img src="../assets/img/clasica2-min.webp" class="d-block w-100" alt="guitarra clasica 2">
