otro arreglo de ruta

--- a/pages/guitarras-pedido.html
+++ b/pages/guitarras-pedido.html
@@ -59,10 +59,10 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/assets/img/electrica-1.webp"  class="d-block w-100" alt="guitarra electrica 1">
+        <img src="../assets/img/electrica-1.webp"  class="d-block w-100" alt="guitarra electrica 1">
       </div>
       <div class="carousel-item">
-        <img src="/assets/img/electrica-2.webp"  class="d-block w-100" alt="guitarra electrica 2">
+        <img src="../assets/img/electrica-2.webp"  class="d-block w-100" alt="guitarra electrica 2">
       </div>
       <div class="carousel-item">
         <img src="../assets/img/electrica-3.webp" class="d-block w-100" alt="guitarra electrica 3">
