se arreglaron enlaces de imagenes

--- a/pages/opiniones-clientes.html
+++ b/pages/opiniones-clientes.html
@@ -46,15 +46,15 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/img/opiniones juan peralta-min.jpeg" class="d-block w-100" alt="foto de juan peralda"> <br>
+            <img src="../assets/img/opiniones-juan-peralta-min.jpeg" class="d-block w-100" alt="foto de juan peralda"> <br>
             <p>"La guitarra que me construyeron es absolutamente increíble. El sonido es rico y cálido, y la estética es impresionante. ¡Me siento como un verdadero artista cuando toco con ella!" - Juan Peralta</p><br>
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/opiniones maria gutierrez-min.jpeg" class="d-block w-100" alt="foto de maria gutierrez"><br>
+            <img src="../assets/img/opiniones-maria-gutierrez-min.jpeg" class="d-block w-100" alt="foto de maria gutierrez"><br>
             <p>"Me sorprendió la atención al detalle y la calidad de la construcción de mi guitarra. Es una verdadera obra de arte. ¡Gracias por crear un instrumento que me hará feliz durante muchos años!" - María Gutierrez</p><br>
           </div>
           <div class="carousel-item">
-            <img src="../assets/img/opiniones carlos romario-min.jpeg" class="d-block w-100" alt="foto de carlos romario"> <br>
+            <img src="../assets/img/opiniones-carlos-romario-min.jpeg" class="d-block w-100" alt="foto de carlos romario"> <br>
             <p>"La experiencia de trabajar con Guitarras Don Tomasino fue increíble. Me escucharon y me ayudaron a crear la guitarra de mis sueños. ¡No puedo recomendarlos lo suficiente!" - Carlos Romario</p> <br>
           </div>
         </div>
@@ -94,7 +94,7 @@
       <p id="seguinos">Seguinos en nuestras redes</p>
       <div class="redes"><a href="http://instagram.com/username" target="_blank"><img src="../assets/img/instagram-min.png" alt="logo de instagram"></a>
       <a href="http://facebook.com/username" target="_blank"><img src="../assets/img/facebook-min.png" alt="logo de facebook"></a>
-      <a href="https://x.com/?lang=es" target="_blank"><img src="../assets/img/x-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="../assets/img/whats app-min.png" alt="logo de whats app"></a>
+      <a href="https://x.com/?lang=es" target="_blank"><img src="../assets/img/x-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="../assets/img/whats-app-min.png" alt="logo de whats app"></a>
       </div>
 
     </footer>
