--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
       <p id="seguinos">Seguinos en nuestras redes</p>
       <div class="redes"><a href="http://instagram.com/username" target="_blank"><img src="../assets/img/instagram-min.png" alt="logo de instagram"></a>
       <a href="http://facebook.com/username" target="_blank"><img src="../assets/img/facebook-min.png" alt="logo de facebook"></a>
-      <a href="https://x.com/?lang=es" target="_blank"><img src="/assets/img/x-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="/assets/img/whats-app-min.png" alt="logo de whats app"></a>
+      <a href="https://x.com/?lang=es" target="_blank"><img src="../assets/img/x-min.png" alt="logo de x"></a><a href="https://web.whatsapp.com/" target="_blank"><img src="../assets/img/whats-app-min.png" alt="logo de whats app"></a>
       </div>
 
     </footer>
