corrección del mapa

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,10 +56,13 @@
     <br><br>
     <p class="parrafo-ubicación fadeIn">Visítanos en nuestro taller</p>
 
-
-    
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.5174471786763!2d-60.66802062497492!3d-32.96374747275137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab7a481156b9%3A0x6fdb9cf7f5a8f34e!2sCallao%202352%2C%20S2003CXB%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1740516428904!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+    <div class="mapa-container">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.5174471786763!2d-60.66802062497492!3d-32.96374747275137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab7a481156b9%3A0x6fdb9cf7f5a8f34e!2sCallao%202352%2C%20S2003CXB%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1740516428904!5m2!1ses!2sar"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+  </div>
+  
+      
     </main>
     <footer class="footer">
       <p>Guitarras Don Tomasino S.R.L.</p>
