modified guitarras a pedido img

--- a/pages/guitarras-pedido.html
+++ b/pages/guitarras-pedido.html
@@ -38,9 +38,11 @@
   <main>
     <h1>Guitarras a pedido</h1>
    
+  <div class="contenedor-imagenes"> 
     <img src="../assets/img/clasica-min.webp" class="rounded float-start" alt="guitarra clasica hecha a pedido">
     <img src="../assets/img/electrica-min.webp" class="rounded float-end" alt="guitarra eléctrica hecha a pedido"> 
-  <br>  
+  </div>
+    <br>  
   <p class="lead">¿Estás buscando una guitarra que se adapte a tus necesidades y preferencias específicas? En Guitarras Don Tomasino, ofrecemos la opción de crear guitarras a pedido, diseñadas y construidas según tus especificaciones. <br> ¿Cómo funciona? <br>1. Consulta: Ponte en contacto con nosotros para discutir tus ideas y necesidades. Nuestros expertos en guitarras te ayudarán a definir tus requerimientos. <br> 2. Diseño: Nuestro equipo de diseñadores creará un diseño personalizado para tu guitarra, teniendo en cuenta tus preferencias de forma, tamaño, madera, electrónica y otros detalles. <br> 3. Construcción: Nuestros artesanos expertos construirán tu guitarra a mano, utilizando materiales de alta calidad y técnicas tradicionales. <br> 4. Prueba y ajuste: Antes de entregarte tu guitarra, la probaremos y ajustaremos para asegurarnos de que suene y se sienta perfecta. Opciones personalizables - Forma y tamaño del cuerpo - Tipo de madera para el cuerpo, el mástil y el diapasón - Electrónica y pastillas - Acabado y decoración - Otros detalles personalizables Plazos y precios - Plazo de entrega: 180 días aproximadamente. - Precio: Se remite un presupuesto personalizado conforme al instrumento que se solicita. <br>¿Qué incluye el precio?- <br> Guitarra personalizada construida a mano - Garantía de calidad y satisfacción</p> <br>
   <div id="carousel-A" class="carousel slide">
     <div class="carousel-indicators">
